--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "lodash.debounce": "^4.0.8",
+    "socket.io-client": "^4.8.3",
     "vue": "^3.5.24"
   },
   "devDependencies": {
